--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,57 +1,271 @@
+/*
+**HEADER SECTION
+*/
+
 @font-face {
   font-family: "Montseratt-Medium";
-  src: url(src"../fonts/Montserrat-Medium.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Montseratt-SemiBold";
-  src: url(src"../fonts/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("..fonts/Montserrat-Medium.ttf") format("truetype");
 }
 
-html,
+@font-face {
+  font-family: "Montseratt-SemiBold";
+  src: url("..fonts/Montserrat-SemiBold.ttf") format("truetype");
+}
+
 body {
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+  background-color: #0b3a40;
+  font-family: "Montseratt-Medium", Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  display: flex;
+  background-color: #fff;
+  flex-direction: column;
+}
+
+/* Header Logo Section */
+
+.header .logo-section {
+  margin: 2px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .logo {
-  outline: 2px solid black;
-  background-size: 50%;
+  min-width: 150px;
+  max-width: 250px;
+  width: 15%;
 }
 
-header {
-  font-family: "Montseratt-SemiBold", "Segoe UI", Tahoma, Geneva, Verdana,
-    sans-serif;
+.order-options {
+  align-self: flex-end;
+  display: flex;
+  flex-direction: row;
+  height: 30px;
+  align-items: center;
+  margin-right: 15px;
+  color: #6b7f7e;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.delivery-icon {
+  min-width: 30px;
+  max-width: 30px;
+  margin-left: 5px;
+  margin-right: 20px;
+}
+
+.cart-icon {
+  min-width: 30px;
+  max-width: 30px;
+  margin-left: 5px;
+}
+
+/* Header Navigation Section */
+
+.navigation {
+  margin-top: 5px;
+  background-color: #0b3a40;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.shop-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.shop-section > a,
+.information-section > a {
+  font-size: 1em;
+  text-decoration: none;
+  color: #fff;
+  margin: 10px;
   text-transform: uppercase;
 }
 
-nav {
-  background: #0b3a40;
+.shop-section > a:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-nav li {
-  display: inline-block;
+.information-section,
+.search-section {
+  display: flex;
+  flex-direction: row;
 }
 
-.homepage-slogan {
+.information-section > a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.search-section > input {
+  margin: 5px;
+  align-items: center;
+  border-radius: 10px;
+  max-width: 100px;
+}
+
+.search-section > input:focus {
+  outline-width: 0;
+}
+
+.search-icon {
+  margin: 5px;
+  width: 25px;
+}
+
+.navigation-mobile {
+  display: none;
+  margin-top: 5px;
+  background-color: #0b3a40;
+  flex-direction: column;
+  color: #fff;
+}
+
+.navigation-mobile > .shop-section,
+.navigation-mobile > .information-section {
+  flex-direction: column;
+}
+
+.navigation-mobile > .search-section,
+#hamburger-menu,
+.hamburger-menu-label {
+  display: none;
+}
+
+#hamburger-menu:checked ~ .navigation-mobile {
+  display: block;
+  color: #fff;
+}
+
+#hamburger-menu:checked ~ .hamburger-menu-label {
+  color: #fff;
+}
+
+@media (max-width: 800px) {
+  .navigation,
+  .info-section {
+    display: none;
+  }
+  .hamburger-menu-label {
+    display: block;
+    float: right;
+    bottom: 0;
+    right: 0;
+  }
+}
+
+/* Header info section */
+
+.info-section {
+  width: 100%;
   text-align: center;
-  font-family: "Montseratt-SemiBold", "Segoe UI", Tahoma, Geneva, Verdana,
-    sans-serif;
-  font-size: 0.8em;
+}
+
+.info-section > h3 {
+  text-transform: uppercase;
   color: #0b3a40;
 }
 
-footer {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+/* MAIN CONTENT SECTION */
+
+.main-content {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  border: 0 none;
 }
 
-/* Home page */
-.homepage-background {
-  background-image: url("../images/jackets-homepage.jpg");
-  outline: 2px solid black;
-  min-height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: right;
-  background-position-y: top;
+.background-image {
+  width: 100%;
+}
+
+/* FOOTER SECTION */
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #0b3a40;
+  color: whitesmoke;
+  font-size: 0.8em;
+}
+
+.contact-us,
+.contact-header {
+  margin-bottom: 15px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #fff;
+}
+
+.contact-us > a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.follow-us,
+.payment-options {
+  margin-bottom: 15px;
+  margin-right: 15px;
+  display: flex;
+  flex-direction: row;
+  font-size: 3em;
+}
+
+.follow-us > i {
+  margin-right: 20px;
+}
+
+.follow-us:hover {
+  cursor: pointer;
+}
+
+i {
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 600px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-self: center;
+    align-items: center;
+  }
+  .order-options > p {
+    display: none;
+  }
+}
+
+@media (min-width: 800px) {
+  #hamburger-menu:checked ~ .navigation-mobile {
+    display: none;
+  }
+}
+
+.fa-bars:before {
+  float: right;
+  right: 0;
+  position: absolute;
+  margin: 10px;
+  font-size: 2em;
+  color: #fff;
 }
