--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -1,4 +1,4 @@
-.overlay {
+.popup {
   position: fixed;
   left: 0;
   right: 0;
@@ -7,26 +7,32 @@
   width: 100%;
   background-color: #fff;
   display: none;
+  z-index: 200;
+}
+
+.overlay {
+  background-color: #fff;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  max-width: 510px;
+  height: 60vh;
+  padding: 60px;
+  border: 1px solid #777;
+  border-top-left-radius: 8px;
+  width: calc(100% - 120px);
+  flex-direction: column;
+  overflow-y: auto;
+  box-shadow: 1px 0px 18px 0px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+  display: flex;
+  transform: translateX(150%);
+  transition: transform 0.4s ease;
 }
 
 .overlay a {
   width: 100%;
   height: 100%;
-}
-
-.overlay-inside {
-  max-width: 510px;
-  width: calc(100% - 120px);
-  height: 60vh;
-  padding: 60px;
-  border: 1px solid #777;
-  border-top-left-radius: 8px;
-  flex-direction: column;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  overflow-y: auto;
-  box-shadow: 1px 0px 18px 0px rgba(0, 0, 0, 0.15);
 }
 
 .overlay-inside h2,
@@ -78,11 +84,6 @@
 
 .overlay-inside .map img {
   border-radius: 20px;
-}
-
-.cart-overlay,
-.order-popup {
-  z-index: 9999;
 }
 
 .order-popup {
