--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -61,7 +61,7 @@ ul {
 }
 
 .checkbox-trigger:checked ~ .product-aside {
-  opacity: 1;
+  display: flex;
 }
 
 .checkbox-trigger:checked ~ .overlay {
