--- a/styles/header.css
+++ b/styles/header.css
@@ -153,9 +153,20 @@ header .logo-section {
   display: none;
 }
 
-#hamburger-menu:checked ~ .navigation-mobile {
+/*#hamburger-menu:checked ~ .navigation-mobile {
   display: block;
   color: #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+}*/
+
+.test-class {
+  display: block;
+  color: #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
 #hamburger-menu:checked ~ .hamburger-menu-label {
