--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,9 +10,9 @@
 }
 */
 
-.main-content img {
-  width: 60px;
-  height: 60px;
+.icon-img {
+  width: 200px;
+  height: 200px;
 }
 
 .main-content ul {
