--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,5 @@
 /* CONTACT PAGE */
 
-/*
 .contact-us,
 .contact-header {
   display: flex;
@@ -8,11 +7,12 @@
   text-decoration: none;
   color: #fff;
 }
-*/
 
 .icon-img {
-  width: 200px;
-  height: 200px;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  text-align: center;
 }
 
 .main-content ul {
