--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,34 +1,30 @@
-/* Background */
-.check-out-modal-main {
+.check-out-modal {
   display: none;
   position: fixed;
-  z-index: 1;
-  padding-top: 100px;
+  z-index: 100000;
+  padding-top: 300px;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
   overflow: auto;
-  background-color: grey;
-  background-color: darkgray;
 }
 
-/* Modal Main Content */
+/* MODAL CONTENT */
 .check-out-modal-content {
   position: relative;
   background-color: whitesmoke;
   margin: auto;
   padding: 0;
-  border: 1px solid darkgray;
+  border: 1px solid grey;
   width: 80%;
-  box-shadow: 0 5px 9px 0 black, 0 5px 20px 0 black;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.5s;
+  -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.5s;
+  animation-duration: 0.4s;
 }
 
-/* Animation */
+/* ANIMATION */
 @-webkit-keyframes animatetop {
   from {
     top: -300px;
@@ -42,7 +38,7 @@
 
 @keyframes animatetop {
   from {
-    top: -300px;
+    top: -500px;
     opacity: 0;
   }
   to {
@@ -51,33 +47,23 @@
   }
 }
 
-/* Closing Button */
-.check-out-modal-close {
-  color: red;
+/*CLOSE BUTTON */
+.close {
+  color: white;
   float: right;
-  font-size: 24px;
-  font-family: "Montseratt-Medium", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: blue;
+  color: #000;
   text-decoration: none;
   cursor: pointer;
 }
 
-.check-out-modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.check-out-modal-modal-body {
-  padding: 2px 16px;
-}
-
-.check-out-modal-footer {
-  padding: 2px 16px;
+.check-out-modal-body {
+  padding: 100px;
   background-color: orange;
   color: black;
 }
