--- a/styles/contact.css
+++ b/styles/contact.css
@@ -47,8 +47,29 @@
   cursor: pointer;
 }
 
+.map {
+  text-align: center;
+}
+
 iframe {
   width: 600px;
   height: 450px;
   border: 0;
+  border-radius: 20px;
+}
+
+#contactUs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contactUs h2 {
+  text-align: start;
+}
+
+#contactUs ul li {
+  display: flex;
+  align-items: center;
+  padding: 1.7rem;
 }
