--- a/styles/header.css
+++ b/styles/header.css
@@ -211,6 +211,11 @@ header .logo-section {
 .info-section {
   width: 100%;
   text-align: center;
+  box-shadow: -1px 3px 3px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: -1px 3px 3px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: -1px 3px 3px 0px rgba(0, 0, 0, 0.2);
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .info-section > h3 {
