--- a/styles/product.css
+++ b/styles/product.css
@@ -56,6 +56,11 @@
   color: #6b7f7e;
 }
 
+.product-info-main-text {
+  text-align: left;
+  color: #6b7f7e;
+}
+
 .product-image {
   max-width: 60%;
 }
