--- a/styles/cart.css
+++ b/styles/cart.css
@@ -31,3 +31,15 @@
   border-radius: 8px;
   margin-bottom: 0;
 }
+
+.cart-closing {
+  font-size: 1.5em;
+  position: absolute;
+  right: 0;
+  padding: 0 20px;
+  cursor: pointer;
+}
+
+.cart-closing:checked ~ .overlay {
+  transform: translateX(0);
+}
