--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,12 @@
   border: 0 none;
 }
 
+.details-page {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
 .background-image {
   width: 100%;
 }
@@ -48,9 +54,19 @@
   position: relative;
 }
 
+.main-content-shop-index {
+  border-color: #fff;
+  width: 100%;
+  height: 100%;
+  border: 0 none;
+  margin: auto;
+  position: relative;
+}
+
 .main-page {
   margin: 50px auto 0;
   max-width: 1800px;
+  text-align: -webkit-center;
 }
 
 main h1 {
