--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,7 @@
   margin: auto;
   display: flex;
   position: relative;
+  /* text-align: left; */
 }
 
 .main-content-shop-index {
@@ -67,6 +68,12 @@
   margin: 50px auto 0;
   max-width: 1800px;
   text-align: -webkit-center;
+}
+
+.main-page-index {
+  margin: 50px auto 0;
+  max-width: 1800px;
+  text-align: left;
 }
 
 main h1 {
