--- a/styles/product.css
+++ b/styles/product.css
@@ -105,6 +105,7 @@
 .sizes ul {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .sizes li:not(:last-of-type) {
@@ -128,14 +129,6 @@
 .pushing-the-comfort-zone p {
   color: #6b7f7e;
   margin-bottom: 10px;
-}
-
-.close-product {
-  position: absolute;
-}
-
-.open-product {
-  color: green;
 }
 
 @media (max-width: 992px) {
