--- a/styles/snackbar.css
+++ b/styles/snackbar.css
@@ -1,4 +1,5 @@
-#snackbar {
+#snackbar,
+#snackbarForm {
   visibility: hidden;
   min-width: 250px;
   margin-left: -125px;
@@ -14,7 +15,8 @@
   font-size: 17px;
 }
 
-#snackbar.show {
+#snackbar.show,
+#snackbarForm.show {
   visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
