--- a/styles/about.css
+++ b/styles/about.css
@@ -11,15 +11,17 @@
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 2rem;
 }
 
 .main-content-about img {
   max-width: 700px;
   padding-bottom: 1rem;
+  border-radius: 30px;
 }
 
 @media (max-width: 800px) {
   .main-content-about img {
-    max-width: 480px;
+    max-width: 100%;
   }
 }
