--- a/styles/contact.css
+++ b/styles/contact.css
@@ -62,6 +62,7 @@ iframe {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #6b7f7e;
 }
 
 #contactUs h2 {
@@ -72,4 +73,9 @@ iframe {
   display: flex;
   align-items: center;
   padding: 1.7rem;
+}
+
+.contact-us-text {
+  padding-left: 2rem;
+  font-size: 1.1em;
 }
