--- a/styles/header.css
+++ b/styles/header.css
@@ -50,6 +50,7 @@ header .logo-section {
   position: relative;
   display: flex;
   align-items: center;
+  margin-left: 0.8rem;
 }
 
 .delivery-icon {
