--- a/styles/snackbar.css
+++ b/styles/snackbar.css
@@ -2,8 +2,9 @@
 #snackbarForm {
   visibility: hidden;
   min-width: 250px;
-  margin-left: -125px;
-  background-color: #333;
+  background-color: #fa4901;
+  border: white;
+  border-style: solid;
   color: #fff;
   text-align: center;
   border-radius: 2px;
@@ -11,6 +12,7 @@
   position: fixed;
   z-index: 1;
   left: 50%;
+  transform: translate(-50%, 0);
   bottom: 30px;
   font-size: 17px;
 }
