--- a/styles/product.css
+++ b/styles/product.css
@@ -96,6 +96,7 @@
   align-items: center;
   margin-bottom: 30px;
   flex-wrap: wrap;
+  padding: 5px;
 }
 
 .sizes p {
@@ -106,6 +107,13 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+
+#size {
+  padding: 3px;
+  margin-left: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .sizes li:not(:last-of-type) {
